# discordNandeshiko

./: .gitattributes  .gitignore  .replit  Procfile  README.md  client_secret.json  game.py  git add commit push.cmd  heroku.yml  launcher.py  pyproject.toml  requirements.txt  run_music.py  setup.py  test.json  test_launcher.py
.credentials/: google-drive-credentials.json
.github/workflows/: discord-token.yml  pylint.yml  python-app.yml
data/: Canan_Link.txt  chatbot-playground.txt
data/Jikan/: Hasil Carian.json  Hasil_Carian.json
data/db/: build.sql  database.db  database.db-journal  nandeshiko-database.db  nandeshiko-database.db-journal
data/kamus/: filter.py  kata_4.txt
data/requirements/: dependency.txt  release.txt
features/bot_main/: __init__.py  token
features/chatterbot_model/: chat_func.py  database.sqlite3
features/cloud/: drive.py  dropbox.py
features/cogs/: anime.py  animerelated.py  animesearch.py  chat.py  developer.py  fun.py  game.py  help.py  info.py  log.py  mihoyo.py  misc.py  mod.py  music.py  nhen.py  nirvana.py  nqn.py  private.py  reactions.py  welcome.py
features/db/: db.py
features/games/: wordle.py
features/utils/: gi.py  hsr.py  kataple.py  menkrep.py  menus.py  wordle.py
lib/bot/: __init__.py
lib/cogs/: animesearch.py  fun.py  help.py  info.py  log.py  mod.py  music.py
pending_cogs/: anime.py  chat_CharacterAI.py  game.py  req.txt
