[tool.poetry]
name = "discordNandeshiko"
version = "0.0.3"
description = "discord bot with python 3.10.2"
authors = ["Glicole <widyanizaz@gmail.com>"]

[tool.poetry.scripts]
startup = "launcher:main"

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.9.1"
mcstatus = "^9.0.4"
nest-asyncio = "^1.5.5"
jikanpy = "^4.3.2"
Pybooru = "^4.2.2"
pygelbooru = "^0.5.0"
jsonschema = "^2.6"
yt-dlp = "^2022.5.18"
youtube-search = "^2.1.0"
dropbox = "^11.31.0"
PyNaCl = "^1.5.0"
Pillow = "^9.1.1"
openai = "^0.19.0"
tenacity = "^8.0.1"
py-cord = {git = "https://github.com/Pycord-Development/pycord", rev = "37c9567769a07fae11d77f7505de50d1a2d12785"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
